--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,8 +21,8 @@ body {
 }
 
 .bg-wrap {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background: url("../images/background.jpg") center center no-repeat;
     background-size: cover;
     position: fixed;
